unpackaged/main/default/objects/Financials__c/Financials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Financials</label>
</CustomObject>