unpackaged/main/default/objects/Financials__c/fields/Internal_Law_Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_Law_Firm_ID__c</fullName>
    <description>Please find the 18 character ID of the law firm that will be considered the internal law firm.</description>
    <inlineHelpText>Please find the 18 character ID of the law firm that will be considered the internal law firm.</inlineHelpText>
    <label>Internal Law Firm ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>