unpackaged/main/default/objects/Financials__c/fields/Operating_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Operating_Bank_Account_Name__c</fullName>
    <label>Operating Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>