unpackaged/main/default/objects/Financials__c/fields/Resolution_Automation__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>With this checked - automated calculations will run on the resolution to calculate, attorney fee&#39;s, net attorney fee etc</description>
    <inlineHelpText>With this checked - automated calculations will run on the resolution to calculate, attorney fee&#39;s, net attorney fee etc</inlineHelpText>
    <label>Resolution Automation</label>
    <type>Checkbox</type>
</CustomField>