unpackaged/main/default/objects/Financials__c/fields/Trust_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Trust_Bank_Account_Name__c</fullName>
    <label>Trust Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>